frontend/src/App.css
/* ... */
.add-members-section .heading{
  display: flex;
  font-family: "Roboto",sans-serif;
  font-size: 1.2rem;
  padding: 1em 1.5em;
  padding-top: 3em;
  background-color: #202c33;
  gap:1.5em;
  width:100%;
}

.members-search{
  display: grid;
  padding:1.5em 0;
  padding-top: 1.5em;
  place-items: center;
  background-color: #111b21;
  width: 100%;
}

.members-search input{
  border:none;
  border-bottom: 0.5px solid rgba(122, 132, 143, 0.349);
  width:85%;
  font-size: 0.9rem;
  font-weight: 400;
  background-color: transparent;
  padding-bottom: 0.3em;
  color:white;
  outline: none;
}

.members-search input::placeholder{
  color:rgb(122, 132, 143);
}

.members-user-card{
  display: grid;
  grid-template-columns: 0.2fr 1fr;
  padding:0.6em 0;
  width:100%;
  cursor: pointer;
}

.members-user-card .user-image{
  width:50px;
  aspect-ratio: 4/4.5;
  object-fit: cover;
  object-position: top center;
}

.members-user-card .members-heading{
  display: grid;
  align-content: center;
  justify-content: flex-start;
  width:100%;
  height: 100%;
  font-size: 1.2rem;
  position: relative;
}

.members-user-card:hover{
  background-color: rgba(63, 76, 92, 0.404);
}

.members-user-card .members-heading::after{
  content: "";
  position:absolute;
  width:100%;
  height: 1px;
  top:118%;
  background-color:rgba(161, 160, 160, 0.315);
  z-index:1000;
}

.members-user-card .members-heading:hover::after{
  display: none;
}

.members-user-profiles{
  overflow-y: scroll;
  flex-grow: 1;
  width:100%;
}

.sm-group-user-profiles{
  display: flex;
  flex-wrap: wrap;
  justify-content: flex-start;
  padding:0.5em 2.3em;
  padding-bottom: 1em;
  width: 100%;
}

.sm-group-user-card{
  display: flex;
  padding:0.2em 0;
  width:max-content;
  cursor: pointer;
}

.sm-group-user-card .sm-user-image{
  width:30px;
  border-radius: 100%;
  aspect-ratio: 4/4.5;
  object-fit: cover;
  object-position: top center;
}

.sm-group-user-card .sm-members-heading{
  display: flex;
  align-content: center;
  justify-content: space-between;
  width:100%;
  font-family:Arial, Helvetica, sans-serif;
  gap:0.5em;
  font-weight: 500;
  font-size: 0.9rem;
  position: relative;
  background-color: #061118 !important;
  padding-left:0.5em;
  padding-right:0.3em;
  border-start-end-radius:100px;
  border-end-end-radius: 100px;
}

.sm-group-user-card .sm-cross-button{
  padding:0.1em 0.2em;
  font-size: 0.8rem;
  outline: none;
  background-color: transparent;
}

.sm-group-user-card .sm-cross-button:hover{
  outline: none;
  background-color:rgba(22, 25, 27, 0.808) !important;
  border-color: transparent;
}

.d-none{
  display: none;
}

.members-footer{
  display: grid;
  place-content:center;
  position: relative;
  bottom: 0;
  padding:2em;
  background-color: rgb(7, 19, 24) !important;
  width:100%;
  font-size: 1.2rem;
}

.members-add-button{
  padding:0.5em 0.7em;
  background-color:#00b38b;
  color:white;
  border-radius: 50%;
  border:none;
  transition:all 400ms ease-in;
}

.members-add-button:hover{
  border:none;
}


/* Group Form*/
#group-details{
  width:100%;
  height:100%;
  position: absolute;
  left:-100%;
  top:0;
  transition: smooth;
}

.gr-sec{
  display: flex;
  flex-direction: column;
}

#group-details .fa-user-group{
  position: relative;
  padding:0.5em 0.4em;
  background-color: rgba(89, 101, 104, 0.281);
  color:rgba(178, 209, 211, 0.253);
  cursor: pointer;
  font-size: 6rem;
  border-radius: 50%;
  margin:0 auto;
  margin-top: 0.3em;
}

#group-details .icon-display{
  display: grid;
  position: absolute;
  row-gap: 0.1em;
  place-content: center;
  width:100%;
  height: 100%;
  letter-spacing: 0.1rem;
  z-index:5;
  color:white;
  top:50%;
  left:50%;
  transform: translate(-50%,-50%);
}

.icon-display .fa-camera{
  font-size: 1.5rem;
}

.icon-display p{
  font-size: 0.65rem;
  font-weight: 300;
  display: grid;
  width:80%;
  place-content: center;
  text-align: center;
  line-height: 1.7em;
}

#group-details input[type="file"]{
  display: none;
}

.group-input{
  border:none;
  border-bottom: 2px solid rgba(122, 132, 143, 0.349);
  width:85%;
  font-size: 1.1rem;
  font-weight: 400;
  background-color: transparent;
  padding-bottom: 0.3em;
  color:white;
  outline: none;
}

.group-input:focus-within{
  border-color: #00b38b;
}

.group-input-box{
  display: grid;
  position:relative;
  width:100%;
  flex-grow: 1;
}

.group-input-box .group-subject-heading{
  position: absolute;
  left:2.5em;
  top:40%;
  color:rgb(89, 111, 117);
  transition:all 300ms ease-in-out;
}

.upandown{
  left:3.2em !important;
  font-size: 0.8rem;
  top:23% !important;
}

#group-details-footer{
  opacity: 0;
  transition: all 200ms ease-in;
}

.j-fs{
  display: flex;
  justify-content: flex-start;
  font-family:sans-serif;
  width:100%;
}

.user-message>span{
  font-size: 0.8rem;
  text-align: left;
  margin-right: auto;
  color:aquamarine;
}

.user-time{
  position: absolute;
  bottom:5%;
  color:rgba(177, 210, 214, 0.932) !important;
  right:5%;
}

